need to change listCharactersHandler
